# KVMPro

./: .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/kvmpro/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/dtc/: Makefile
app/src/main/java/com/example/kvmpro/: KVMSettingsConfiguration.java  MainActivity.java  VMConfiguration.java  VmActivity.java  VmRun.java
app/src/main/res/layout/: activity_main.xml  activity_vm.xml  activity_vm_run.xml
app/src/main/res/layout-w1240dp/: content_scrolling.xml
app/src/main/res/layout-w936dp/: content_scrolling.xml
app/src/main/res/menu/: menu_vm_run.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/kvmpro/: ExampleUnitTest.java
scripts/: patch_selinux.sh
